syntax = "proto3";

option java_package = "com.proto.greet";
option java_multiple_files = true;

message SumRequest {
  int32 first_operand = 1;
  int32 second_operand = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

service SumService {
  rpc Sum(SumRequest) returns (SumResponse) {};
}